Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-18080

conf-sanity test_32a: replace_nids t32fs-OST0000 failed on el9.4

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.16.0
    • Lustre 2.16.0
    • 3
    • 9223372036854775807

      This issue was created by maloo for Andreas Dilger <adilger@whamcloud.com>

      This issue relates to the following test suite run: https://testing.whamcloud.com/test_sets/04f76975-23c6-4c44-ad1d-955f9008a6f1

      test_32a failed with the following error:

      == conf-sanity testing /usr/lib64/lustre/tests/disk2_12-ldiskfs.tar.bz2 upgrade ==
      Lustre: t32fs-MDT0000-osd: enabled 'large_dir' feature on device /dev/loop0
      Lustre: 243660:0:(scrub.c:190:scrub_file_load()) t32fs-MDT0000: reset scrub OI count for format change (LU-16655)
      LDISKFS-fs error (device loop0): osd_iget2:500: inode #197: comm OI_scrub: unexpected EA_INODE flag
      Aborting journal on device loop0-8.
      LustreError: 243663:0:(osd_handler.c:1867:osd_trans_commit_cb()) transaction @0xffff90c8861a0c00 commit error: 2
      LDISKFS-fs (loop0): Remounting filesystem read-only
      LustreError: 243666:0:(scrub.c:243:scrub_file_store()) t32fs-MDT0000: store scrub file: rc = -30
      

      Test session details:
      clients: https://build.whamcloud.com/job/lustre-master/4558 - 6.8.0-35-generic
      servers: https://build.whamcloud.com/job/lustre-master/4558 - 5.14.0-427.24.1_lustre.el9.x86_64

      This has failed repeatedly with el9.4 servers both before and after the el9.4 server patch series landed:

      <<Please provide additional information about the failure here>>

      VVVVVVV DO NOT REMOVE LINES BELOW, Added by Maloo for auto-association VVVVVVV
      conf-sanity test_32a - replace_nids t32fs-OST0000 10.240.22.222@tcp failed

            dongyang Dongyang Li
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            7 Start watching this issue

              Created:
              Updated:
              Resolved: